[package]
name = "rustcardium"
version = "0.0.0"
authors = ["Thomas Krause <thomaskrause@posteo.de>"]
edition = "2018"
build = "build.rs"  

panic = "abort"

[dependencies]
r0 = "0.2"
cty = "0.2"
arrayvec = {version = "0.4", default-features = false}
panic-abort = "0.3"

[build-dependencies]
bindgen = "0.51"


