[package]
authors = ["Thomas Krause <thomaskrause@posteo.de>"]
edition = "2018"
name = "accel-tester"
version = "0.0.0"

[dependencies]
rustcardium = {path = "../"}
numtoa = "0.2"

[[bin]]
name = "accel-tester"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
